--- a/env/.env.production
+++ b/env/.env.production
@@ -1,5 +1,5 @@
 NODE_ENV=production
 PORT=8080
-MONGO_URI=mongodb+srv://sathish9585482928:Sathish12345@cluster0.dgvve.mongodb.net/
+MONGO_URI=mongodb+srv://sathish9585482928:Sathish12345@cluster0.dgvve.mongodb.net/book_management
 #mongodb://sathish9585482928:Sathish12345@cluster0-shard-00-00.dgvve.mongodb.net:27017,cluster0-shard-00-01.dgvve.mongodb.net:27017,cluster0-shard-00-02.dgvve.mongodb.net:27017/book_management?ssl=true&replicaSet=atlas-xxxx-shard-0&authSource=admin&retryWrites=true&w=majority
 JWT_SECRET="jwtsecretkey123"
