--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "prod": "cross-env NODE_ENV=production nodemon index.js",
-    "test": "cross-env NODE_ENV=test nodemon index.js"
+    "dev": "node index.js"
+    
   },
   "keywords": [],
   "author": "",
