--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "start": "node index.js",
     "dev": "node index.js"
-    
   },
   "keywords": [],
   "author": "",
@@ -23,6 +22,7 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+     "dotenv": "^17.2.2"
   }
 }
