--- a/package.json
+++ b/package.json
@@ -4,30 +4,21 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "node index.js"
+    "dev": "nodemon index.js"
   },
-  "keywords": [],
-  "author": "",
   "license": "ISC",
-  "description": "",
-  "devDependencies": {
+  "dependencies": {
+    "express": "^5.1.0",
+    "mongoose": "^8.18.1",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "cross-env": "^10.0.0",
     "dotenv": "^17.2.2",
-    "dotenv-cli": "^10.0.0",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.18.1",
-    "nodemon": "^3.1.10"
+    "jsonwebtoken": "^9.0.2"
   },
-  "dependencies": {
-    "bcrypt": "^6.0.0",
-    "body-parser": "^2.2.0",
+  "devDependencies": {
+    "nodemon": "^3.1.10",
     "cross-env": "^10.0.0",
-    "dotenv-cli": "^10.0.0",
-    "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.10"
+    "dotenv-cli": "^10.0.0"
   }
 }
