--- a/env/.env.development
+++ b/env/.env.development
@@ -1,5 +1,5 @@
-NODE_ENV=development
-PORT=3000
-MONGO_URI=mongodb://127.0.0.1:27017/book_management
+NODE_ENV=production
+PORT=8080
+MONGO_URI=mongodb+srv://sathish9585482928:Sathish12345@cluster0.dgvve.mongodb.net/book_management
 JWT_SECRET="jwtsecretkey123"
 
